--- a/app/src/main/res/layout/fragment_word_list.xml
+++ b/app/src/main/res/layout/fragment_word_list.xml
@@ -14,11 +14,12 @@
      limitations under the License.
 -->
 
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailActivity">
+    tools:context=".WordListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
